# sentinel-frontend/libs/shared/api/model/api-v1-rules-post-request-rule.ts
@@ -7,11 +7,12 @@
  * https://openapi-generator.tech
  * Do not edit the class manually.
  */
-import { ApiV1RulesPostRequestRule } from './api-v1-rules-post-request-rule';
 
 
-export interface ApiV1RulesPostRequest { 
-    rule?: ApiV1RulesPostRequestRule;
+export interface ApiV1RulesPostRequestRule { 
+    name: string;
+    description: string;
+    severity_id: number;
 }
 
 
